# RUSTy

./: .gitignore  CMakeLists.txt  Exp.cpp  Exp.h  Fun.cpp  Fun.h  README.md  Scanner.cpp  Scanner.h  Stmt.cpp  Stmt.h  Token.cpp  Token.h  docker-compose.yml  main.cpp  make.py  makefile  server.py  shell.nix  test_i64
compiler-backend/: Dockerfile  backend.py  main  main_asm
compiler-frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
compiler-frontend/app/: page.tsx
input/: 01_var_dec_basic.rs  02_var_dec_arit.rs  03_var_dec_mut.rs  06_exp_misc.rs  07_ctrl_if.rs  09_ctrl_if_else_anid.rs  10_ctrl_while_basic.rs  11_ctrl_for_basic.rs  12_ctrl_for_while_anid.rs  14_fun_recursive.rs  15_fun_params.rs  16_funs.rs  17_fun_recursive2.rs  1_var_dec_basic.rs  4_exp_arit_basic.rs  5_exp_bool_basic.rs  8_ctrl_else.rs  9_ctrl_if_else_anid.rs  arr_1_test_1.rs  arr_3_test_3.rs  arr_4_test_4.rs  arr_5_test_5.rs  str_1_test_1.rs  str_2_test_2.rs  str_3_test_3.rs  str_4_test_4.rs  test.rs  test_i64.rs
src/: CodeGen.cpp  CodeGen.h  Exp.cpp  Exp.h  Fun.cpp  Fun.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  Stmt.cpp  Stmt.h  Token.cpp  Token.h  Visitor.cpp  Visitor.h
src/lexic/: Scanner.cpp  Scanner.h  Token.cpp  Token.h
src/semantic/: CodeGen.cpp  CodeGen.h  NameRes.cpp  NameRes.h  Printer.cpp  Printer.h  SymbolTable.cpp  SymbolTable.h  TypeCheck.cpp  TypeCheck.h  Visitor.cpp  Visitor.h
src/syntactic/: Exp.cpp  Exp.h  Fun.cpp  Fun.h  Parser.cpp  Parser.h  Stmt.cpp  Stmt.h
src/syntax/: Exp.cpp  Exp.h  Fun.cpp  Fun.h  Parser.cpp  Parser.h  Stmt.cpp  (+1 more)
(+7 files in other folders)
